# Readit-capstone

./: .env_example  db.sqlite3  model_thoughts.txt  pyproject.toml
readit/: settings.py  urls.py
readit_site/: admin.py  apps.py  forms.py  models.py  urls.py  validators.py  views.py
readit_site/migrations/: 0001_initial.py  0002_auto_20200714_1558.py  0002_remove_subreaditmodel_slug.py  0002_subreaditmodel_description.py  0002_subreaditmodel_image.py  0002_subreaditmodel_video.py  0003_auto_20200716_1619.py
readit_site/templates/: 404.html  500.html  base.html  change_password.html  create_subreadit.html  index.html  loginform.html  must_authenticate.html  post.html  post_snippet.html  register.html  subreadit.html
readit_site/templates/snippets/: snippet.html
readit_site/templatetags/: lookup.py
