[tool.poetry]
name = "readit"
version = "0.1.0"
description = ""
authors = ["DavidRinSE <davidrichardsonIN@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
pillow = "^7.2.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.3"
ipython = "^7.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
